# basic-demos

./: APLlogd1.sac  APLlogd2.sac  APLlogd3.sac  APLmconv.sac  APLmconv_opt.sac  APLtomcatv.sac  CMakeLists.txt  IntStack.dec  IntStack.sac  Makefile  NASmg_rotate.sac  NASmg_with_borders.sac  RCS-files  README  README.md  arrays.sac  arrays1.sac  arrays2.sac  gcd.sac  mconv.sac  pde1.sac  relax_fix.sac  relax_fix_rotate.sac  shallow.sac  string.sac  use_CommandLine.sac  use_IntStack.sac  use_String.sac  withloop.sac
c_from_sac/: CMakeLists.txt  List.dec  Makefile  MyList.sac  RCS-files  README  README.md  quicksort_list.sac
c_from_sac/src/List/: List.h  Makefile  RCS-files  append.c  cons.c  drop.c  empty.c  free.c  hd.c  length.c  nil.c  nth.c  take.c  tl.c
c_from_sac/src/MyList/: Makefile  append.c  cons.c  drop.c  empty.c  hd.c  length.c  nil.c  nth.c  take.c  tl.c
composing_programs/: CMakeLists.txt  README.md  arrays.sac  use_CommandLine.sac  use_String.sac  withloop.sac
sac_from_c/: CMakeLists.txt  Makefile  RCS-files  README  README.md  Sum.sac  features.c  objects.c  overload.c  relax.c  summarizer.c  tutorial.c  usePhm.c  useTwoLibs.c  useTypes.c
sac_from_c/inputs/: Makefile  RCS-files  relax.1000_100  relax.inp.10_1000  relax.inps
sac_from_c/src/: IntStack.dec  IntStack.sac  Makefile  RCS-files  featuresMod_fix.sac  featuresMod_gen.sac  featuresMod_gen.spec  objectsMod.sac  overloadMod.sac  overloadMod.spec  relaxMod.sac  relaxMod.spec  tutorialMod.sac  tutorialMod.spec  usePhmMod.sac  useTwoLibsMod1.sac  useTwoLibsMod2.sac  useTypesMod.sac
sac_from_c_obsolete/: Makefile  README  objects.c  overload.c  relax.c  tutorial.c
sac_from_c_obsolete/inputs/: relax.400_1000  relax.90_1000  relax.inps
sac_from_c_obsolete/src/: IntStack.dec  featuresMod_fix.sac  overloadMod.sac  relaxMod.spec  tutorialMod.sac
simple/: CMakeLists.txt  Makefile  RCS-files  README  README.md  fibonacci.sac  gcd.sac  inssort.sac  inssort.vers  qsort_clike.sac  quicksort.sac
simple/inputs/: reversed200
states/: CMakeLists.txt  IntStack.dec  IntStack.sac  Makefile  RCS-files  README  README.md  use_IntStack.sac
